--- a/schedule/index.html
+++ b/schedule/index.html
@@ -230,10 +230,13 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
               <td><br>
               </td>
               <td>2/21/2022</td>
-              <td><b>Quiz 1 Released</b> </td>
+              <td><b>Quiz 1 Released -> It is live in Collab</b>
+              Project One Live</td>
               <td><br>
               </td>
-              <td> <br>
+              <td> <img src="../images/check.png"> <a
+                  href="https://github.com/jasonwnc/ds3002/blob/gh-pages/assets/DS3002-Data-Project-1a.docx"
+                  target="_new">Grap the project</a> <br>
               </td>
             </tr>
             <tr>
