--- a/schedule/index.html
+++ b/schedule/index.html
@@ -264,15 +264,23 @@ href="https://towardsdatascience.com/all-the-things-you-can-do-with-github-api-a
             <tr>
               <td>08</td>
               <td>3/14/2022</td>
-              <td>Using and Managing GitHub &amp; Project Check-in</td>
+               <td>NoSQL &amp; Unstructured Data<br>
+              </td>
               <td><br>
               </td>
-              <td>
-                <!--   <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
-        <img src="../images/check.png" /> <a href="../assets/MySQL-Cheat-Sheet.pdf" target="_new">MySQL Cheat Sheet</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/16318?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=9315001" target="_new">AWS Relational Database Service</a>
-      --><br>
-              </td>
+              <td> <img
+                  src="file:///Users/jawilli/Documents/GitHub/ds3002/images/video.png">
+                <a href="https://www.youtube.com/watch?v=uD3p_rZPBUQ"
+                  target="_new">Intro to NoSQL</a> <br>
+                <img
+                  src="file:///Users/jawilli/Documents/GitHub/ds3002/images/video.png">
+                <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE"
+                  target="_new">MongoDB in 30 Minutes</a> <br>
+                <img
+                  src="file:///Users/jawilli/Documents/GitHub/ds3002/images/lab.png">
+                <a
+href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mongodb.md"
+                  target="_new">Hands-On MongoDB</a> </td>
             </tr>
             <tr>
               <td><br>
