--- a/schedule/index.html
+++ b/schedule/index.html
@@ -265,7 +265,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
               <td><br>
               </td>
               <td>3/16/2022</td>
-              <td><b>Quiz 2 Released</b></td>
+              <td><b>Project Due</b></td>
               <td><br>
               </td>
               <td> <img src="../images/writing.png"> Take the Quiz<br>
@@ -274,7 +274,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
             <tr>
               <td>10</td>
               <td>3/21/2022 </td>
-              <td>Catch up</td>
+              <td>Catch up/Hands on NOSQL</td>
               <td><br>
               </td>
               <td> <br>
@@ -284,7 +284,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
               <td><br>
               </td>
               <td>3/23/2022</td>
-              <td><b>Quiz 3 Released</b></td>
+              <td><b>Quiz 2 Released</b></td>
               <td><br>
               </td>
               <td> <img src="../images/writing.png"> <b>Take the Quiz</b><br>
