--- a/schedule/index.html
+++ b/schedule/index.html
@@ -284,7 +284,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
               <td><br>
               </td>
               <td>3/23/2022</td>
-              <td><b>Quiz 2 Released</b></td>
+              <td><b>Quiz 2 Released(DELAYED)</b></td>
               <td><br>
               </td>
               <td> <img src="../images/writing.png"> <b>Take the Quiz</b><br>
@@ -293,7 +293,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
             <tr>
               <td><br>
               </td>
-              <td>11/8/2021</td>
+              <td>4/8/2022</td>
               <td><b></b><br>
               </td>
               <td><br>
@@ -303,7 +303,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
             </tr>
             <tr>
               <td>11</td>
-              <td>2/14/2022</td>
+              <td>4/14/2022</td>
               <td>Data Storage and Management</td>
               <td><br>
               </td>
@@ -368,7 +368,7 @@ href="https://www.qwiklabs.com/focuses/1760?catalog_rank=%7B%22rank%22%3A6%2C%22
               <td><br>
               </td>
               <td>4/13/2022</td>
-              <td><b>Quiz 4 Released (Maybe)</b></td>
+              <td><b></b></td>
               <td><br>
               </td>
               <td> <img src="../images/writing.png"> <b>Take the Quiz<br>
@@ -392,7 +392,7 @@ href="https://www.qwiklabs.com/focuses/1760?catalog_rank=%7B%22rank%22%3A6%2C%22
               </td>
               <td><img src="../images/writing.png"> <a
                   href="../assets/DS3002.pdf" style="font-weight:bold">
-                  See prompt</a></td>
+                 </a></td>
             </tr>
           </tbody>
         </table>
