--- a/schedule/index.html
+++ b/schedule/index.html
@@ -284,7 +284,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
               <td><br>
               </td>
               <td>3/23/2022</td>
-              <td><b>Quiz 2 Released(DELAYED)</b></td>
+              <td><b>Quiz 2 Released(DELAYED.  Working on AWS/Cloud S3)</b></td>
               <td><br>
               </td>
               <td> <img src="../images/writing.png"> <b>Take the Quiz</b><br>
