--- a/schedule/index.html
+++ b/schedule/index.html
@@ -287,7 +287,8 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
               <td><b>Quiz 2 Released(DELAYED.  Working on AWS/Cloud S3)</b></td>
               <td><br>
               </td>
-              <td> <img src="../images/writing.png"> <b>Take the Quiz</b><br>
+              <td> <img src="../images/writing.png"> <b>
+                AWS Labs /b><br>
               </td>
             </tr>
             <tr>
