--- a/schedule/index.html
+++ b/schedule/index.html
@@ -307,7 +307,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
             <tr>
               <td>13</td>
               <td>4/11/2022</td>
-              <td>Accessing Open Data</td>
+              <td>Project 2 Release</td>
               <td><br>
               </td>
               <td>
