--- a/schedule/index.html
+++ b/schedule/index.html
@@ -295,11 +295,11 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
               <td><br>
               </td>
               <td>4/4/2022</td>
-              <td><b></b><br>
+              <td><b>Data Lakes With Data Bricks & Delta Lakes</b><br>
               </td>
               <td><br>
               </td>
-              <td><br>
+              <td>https://www.youtube.com/watch?v=y91r_DLMEq8<br>
               </td>
             </tr>
         
