--- a/schedule/index.html
+++ b/schedule/index.html
@@ -307,7 +307,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
             <tr>
               <td>13</td>
               <td>4/11/2022</td>
-              <td>Project 2 Release</td>
+              <td>Putting it all together  | Project 2 Release (Due May 7th @ Noon)</td>
               <td><br>
               </td>
               <td>
@@ -324,7 +324,7 @@ href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mong
               <td><b></b></td>
               <td><br>
               </td>
-              <td> <img src="../images/writing.png"> <b>Take the Quiz<br>
+              <td> <img src="../images/writing.png"> <b>Take the Quiz(Optional)<br>
                 </b></td>
             </tr>
             <tr>
